<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"

    android:orientation="vertical"
    tools:context="com.gmonetix.bookspivot.activity.LoginActivity">


    <ImageView

        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="fitEnd"
        android:src="@drawable/logo_header" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="login"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/appCompatEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/edittext"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
        android:background="@drawable/edittext"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/password"

        android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Button

            android:layout_width="80dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button1"

            android:fontFamily="sans-serif-smallcaps"
            android:text="GO!"
            android:textColor="@color/white"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/forgetpass"
        android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#80e3e3e3"

        android:elevation="8dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="or"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/dowithsocial"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:weightSum="2">
        <ImageView
            android:id="@+id/fb_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_facebook" />
        <ImageView
            android:id="@+id/google_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_google_plus" />
    </LinearLayout>

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/noaccount"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
